<resources>
    <string name="app_name">app_energia_renovavel</string>
    <string name="barra_para_nome_e_logo">barra para nome e logo</string>
    <string name="solar">solar</string>
    <string name="eolica">eolica</string>
    <string name="oceanica">oceanica</string>
    <string name="pokeenergy">PokeEnergy</string>
    <string name="barra_para_mensagem_de_escolha">barra para mensagem de escolha</string>
    <string name="escolha_uma_das_energias_acima">Escolha uma das energias acima ^^</string>
    <string name="hidreletrica">hidreletrica</string>
    <string name="logo">logo</string>
    <string name="barra_para_nome_da_energia_e_pokemon">barra para nome da energia e pokemon</string>
    <string name="energia_solar">Energia Solar</string>
    <string name="barra_para_detalher_sobre_a_energia_solar">barra para detalher sobre a energia solar</string>
    <string name="descri_o_energia_que_funciona_de_forma_limpa_sem_causar_graves_agress_es_ao_meio_ambiente_seu_mecanismo_funciona_atrav_s_da_absor_o_dos_raios_solares_trensformando_em_energia_el_trica">Descrição: Energia que funciona de forma limpa, sem causar graves agressões ao meio ambiente, seu mecanismo funciona através da absorção dos raios solares, trensformando em energia elétrica.</string>
    <string name="imagem_ener_solar">imagem ener solar</string>
    <string name="pr_s_ocupa_pouco_espa_o_n_o_emite_poluentes_renov_vel">Prós: Ocupa pouco espaço, não emite poluentes, é renovável.</string>
    <string name="contras_custo_elevado_depend_ncia_clim_tica_capacidade_de_armazenamento_baixa">Contras: Custo elevado, dependência climática, capacidade de armazenamento baixa.</string>
    <string name="ranking">Ranking:</string>
    <string name="classifica_o_da_energia_solar">classificação da energia solar</string>
    <string name="pokemon_1">pokemon 1</string>
    <string name="primeiro_botao_de_voltar">primeiro botao de voltar</string>
    <string name="barra_para_nome_da_energia_e_pokemon_eolica">barra para nome da energia e pokemon eolica</string>
    <string name="energia_e_lica">Energia Eólica</string>
    <string name="imagem_da_energia_eolica">imagem da energia eolica</string>
    <string name="barra_com_detalhes_da_energia_eolica">barra com detalhes da energia eolica</string>
    <string name="descri_o_s_o_cata_ventos_gigantes_que_s_o_movidos_pela_for_a_do_vento_assim_fazendo_a_convers_o_desse_movimento_em_energia_el_trica">Descrição: São cata-ventos gigantes, que são movidos pela força do vento, assim, fazendo a conversão desse movimento em energia elétrica.</string>
    <string name="pr_s_renov_vel_n_o_emite_gases_poluentes_diminui_a_emiss_o_de_gases_do_efeito_estufa">Prós: É renovável, não emite gases poluentes, diminui a emissão de gases do efeito estufa.</string>
    <string name="contras_nem_sempre_o_vento_sopra_quando_necess_rio_impacto_visual_gera_o_de_ru_do_constante">Contras: Nem sempre o vento sopra quando necessário, impacto visual, geração de ruído constante.</string>
    <string name="ranking_e">Ranking E:</string>
    <string name="imagem_rank_eolica">imagem rank eolica</string>
    <string name="pokemon2">pokemon2</string>
    <string name="segundo_botao_para_voltar_ao_menu">segundo botao para voltar ao menu</string>
    <string name="barra_com_nome_da_energia_e_pokemon_hidre">barra com nome da energia e pokemon hidre</string>
    <string name="barra_com_detalhes_da_energia_hidre">barra com detalhes da energia hidre</string>
    <string name="imagem_energia_hidre">imagem energia hidre</string>
    <string name="energia_hidreletrica">Energia Hidreletrica</string>
    <string name="descri_o_ela_funciona_atrav_s_dos_movimentos_das_aguas_assim_na_usina_convertida_em_energia_el_trica">Descrição: Ela funciona através dos movimentos das aguas, assim, na usina, é convertida em energia elétrica.</string>
    <string name="pr_s_utiliza_um_recurso_renov_vel_emitem_um_nivel_menor_de_poluentes_atmosf_ricos">Prós: Utiliza um recurso renovável, emitem um nivel menor de poluentes atmosféricos.</string>
    <string name="contras_grande_impacto_no_meio_ambiente">Contras: grande impacto no meio ambiente.</string>
    <string name="ranking_h">Ranking H:</string>
    <string name="imagem_rank_hidre">imagem rank hidre</string>
    <string name="pokemon3">pokemon3</string>
    <string name="terceiro_botao_para_voltar_ao_menu">terceiro botao para voltar ao menu</string>
    <string name="barra_com_nome_e_pokemon_oce">barra com nome e pokemon oce</string>
    <string name="barra_com_detalhes_da_energia_oce">barra com detalhes da energia oce</string>
    <string name="imagem_energia_oce">imagem energia oce</string>
    <string name="energia_oce_nica">Energia Oceânica</string>
    <string name="descri_o_ele_gera_energia_atrav_s_das_mar_s_dos_oceanos">Descrição: Ele gera energia através das marés dos oceanos.</string>
    <string name="pr_s_energia_renov_vel_baixo_nivel_de_polui_o_das_guas">Prós: energia renovável, baixo nivel de poluição das águas.</string>
    <string name="contras_custo_muito_elevado_necessita_de_reas_bastante_espec_ficas">Contras: custo muito elevado, necessita de áreas bastante específicas.</string>
    <string name="ranking_o">Ranking O:</string>
    <string name="imagem_rank_oce">imagem rank oce</string>
    <string name="pokemon4">pokemon4</string>
    <string name="quarto_botao_para_voltar_ao_menu">quarto botao para voltar ao menu</string>
    <string name="logoapp">logoapp</string>
    <string name="nome_logo">POKE ENERGY</string>
    <string name="txt_login">Faça o seu login aqui:</string>
    <string name="txt_email">Email:</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="txt_senha">Senha:</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="btn_enviar">Enviar</string>
<<<<<<< HEAD
    <string name="botao_de_suporte">Botao_de_suporte</string>
    <string name="veja">VEJA</string>
    <string name="veja_2">VEJA</string>
    <string name="veja_3">VEJA</string>
    <string name="veja_4">VEJA</string>
    <string name="veja_5">VEJA</string>
    <string name="suporte">Suporte</string>
    <string name="confira_abaixo_alguns_links_sobre_energia_renov_vel_que_podem_te_auxiliar">Confira abaixo alguns links sobre energia renovável que podem te auxiliar:</string>
    <string name="sobre_energia_solar">Sobre Energia Solar:</string>
    <string name="sobre_energia_eolica">Sobre Energia Eolica:</string>
    <string name="sobre_energia_hidreletrica">Sobre Energia Hidreletrica:</string>
    <string name="sobre_energia_oceanica">Sobre Energia Oceanica:</string>
    <string name="sobre_energias_renovaveis">Sobre Energias Renovaveis:</string>
=======
>>>>>>> 0f096578056a0d32d406808e852d333ba8e0ea04
</resources>